# pydremio

./: .gitignore  Makefile  README.md  create_dataset.py  pyproject.toml
.github/workflows/: pytest.yml  release.yml
docs/: CHANGELOG.md  DATASET.md  DREMIO_METHODS.md  GETTING_STARTED.md  JOBRESULT.md
src/dremio/: dremio.py  version.py
src/dremio/_mixins/: __init__.py  _catalog.py  _dataset.py  _dbt.py  _flight.py  _folder.py  _query.py  _reflection.py  _sql.py  _table.py  baseclass.py
src/dremio/models/: __init__.py  dataset.py  flight_config.py  folder.py  jobs.py  reflections.py  utils.py
src/dremio/utils/: converter.py
tests/dremio/: test_dataset.py  test_folder_advanced.py  test_query.py
tests/internal/: test_path_converter.py
